# launcher-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src/: env.rs  exec_d.rs  exit.rs  launch.rs  main.rs  shell.rs
src/api/: buildpack.rs  mod.rs  platform.rs
tests/: integration_test.rs  ported_behavioral_test.rs  ported_exec_d_test.rs  ported_misc_behavioral_test.rs  ported_shell_behavioral_test.rs
